--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@vue/cli-service": "^4.5.11",
     "@vuepress/plugin-blog": "^1.9.4",
-    "svgs2font": "^1.0.4",
+    "svgs2font": "jinyaoMa/svgs2font#master",
     "vuepress": "^1.8.0"
   },
   "dependencies": {
