--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "build:icons": "node icons/index.js",
-    "build:style-default": "gulp build",
+    "build:style-theme": "gulp build",
     "build:packages": "vue-cli-service build --target lib --name mustom-next --dest build/packages packages/index.js",
     "build:docs": "vuepress build docs",
     "serve:docs": "vuepress dev docs"
