--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
   ],
   "devDependencies": {
     "@vue/cli-service": "^4.5.11",
-    "@vuepress/plugin-blog": "^1.9.4",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean-css": "^4.3.0",
     "gulp-stylus": "^2.7.0",
-    "svgs2font": "jinyaoMa/svgs2font#master",
-    "vuepress": "^1.8.0"
+    "svgs2font": "jinyaoMa/svgs2font#v1.0.7-mustom.next"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@vuepress/plugin-blog": "^1.9.4",
     "axios": "^0.21.1",
+    "vuepress": "^1.8.0",
     "vuex": "^3.6.2"
   }
 }
