--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jinyaoma/mustom-next",
-  "version": "0.0.1-20210323.0205",
+  "version": "0.0.1-20210323.0406",
   "description": "",
   "scripts": {
     "build:icons": "node icons/index.js",
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
-    "@vuepress/plugin-blog": "^1.9.4",
+    "@vuepress/plugin-blog": "jinyaoMa/vuepress-plugin-blog#1.9.4-mustom.next",
     "axios": "^0.21.1",
     "vue-axios": "^3.2.4",
     "vuepress": "^1.8.0",
