--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vue-axios": "^3.2.4",
     "vuepress": "^1.8.0",
     "vuepress-plugin-mathjax": "^1.2.8",
+    "vuepress-plugin-social-share": "^1.0.0",
     "vuex": "^3.6.2"
   }
 }
